Fix entry style bleed

--- a/src/Carousel/Carousel.scss
+++ b/src/Carousel/Carousel.scss
@@ -71,7 +71,7 @@ $center-column: min(calc(600px - $button-width - $button-width), calc(100vw - $b
             margin: 0 0 15px;
         }
 
-        .entry {
+        .carousel-entry {
             margin: 0 15px 0;
         }
 
